# ComfyUI-Styler-Pipeline

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
assets/: placeholders.json  styler_pipeline.css
data/: aesthetic.json  all_in_one.json  anime.json  atmosphere.json  camera_angles.json  clothing.json  clothing_state.json  clothing_style.json  depth.json  environment.json  face.json  fantasy.json  filter.json  gothic.json  hair.json  halloween.json  lighting.json  line_art.json  lingerie.json  mood.json  punk.json  rendering.json  sci_fi.json  timeofday.json
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-TW.md  README.zh.md  TRANSLATING_README.md  TRANSLATING_UI.md
js/: dynamic-styler-pipeline-picker.js  dynamic-styler-pipeline.js  style-data.js  theme.js  utils.js
js/modules/: about.js  ai-styler-models.js  ai-styler.js  api.js  browse.js  category-sidebar-shared.js  editor.js  guide.js  i18n.js  index.js  layout-shared.js
locales/de/: ui.json
locales/en/: ui.json
locales/es/: ui.json
locales/fr/: ui.json
locales/ja/: ui.json
locales/ko/: ui.json
locales/pt/: ui.json
locales/ru/: ui.json
locales/zh/: ui.json
locales/zh-TW/: ui.json
nbproject/: project.properties
nodes/: advanced_styler_pipeline.py  dynamic_styler_pipeline.py  dynamic_styler_pipeline_index.py  dynamic_styler_pipeline_picker.py  index_iterator.py
utils/: styler_core.py
workflows/: openpose.json
