[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-styler-pipeline"
version = "0.1.0"
description = "Explicit styler-pipeline nodes for ComfyUI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/andreszs/comfyui-styler-pipeline"
Documentation = "https://github.com/andreszs/comfyui-styler-pipeline#readme"
"Bug Tracker" = "https://github.com/andreszs/comfyui-styler-pipeline/issues"

[tool.comfy]
PublisherId = "andreszs"
DisplayName = "Styler Pipeline"
Icon = ""
