[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-styler-pipeline"
version = "1.0.1"
description = "Apply global or per-area style presets, with optional AI-assisted style suggestions and ControlNet/OpenPose-friendly conditioning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/andreszs/comfyui-styler-pipeline"
Documentation = "https://github.com/andreszs/comfyui-styler-pipeline#readme"
"Bug Tracker" = "https://github.com/andreszs/comfyui-styler-pipeline/issues"

[tool.comfy]
PublisherId = "andreszs"
DisplayName = "Styler Pipeline"
Icon = ""
